fix spacing gaps in footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,13 +117,14 @@ footer a:hover {
     color: var(--highlight-yellow);
 }
 
-.footer-nourish {
+#footer-nourish {
     font-family: var(--heading-font);
     text-transform: uppercase;
     font-size: 1.3rem;
     color: var(--light-green);
     font-weight: 180;
     letter-spacing: 0.5px;
+    margin-bottom: 0;
 }
 
 /* INDEX.HTML */
@@ -139,7 +140,7 @@ footer a:hover {
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: 0;
-  }  
+}
 
 .search-form {
     display: flex;
@@ -421,4 +422,13 @@ form {
 
 .link:hover {
     color: var(--highlight-red);
+}
+
+/* MEDIA QUERY */
+
+/* Aligns footer icons to the left on small screens */
+@media (max-width: 767px) {
+    .fa-facebook-f {
+        padding-left: 0;
+    }
 }
